add functions to the overlayWindow

--- a/assets/styles/landing.css
+++ b/assets/styles/landing.css
@@ -253,7 +253,7 @@
     cursor: pointer;
 }
 
-#startTheGame {
+#startTheGameBtn {
     display: block;
     background: #4565ae;
     border: none;
