--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -1,13 +1,35 @@
 body {
     background: transparent !important;
 }
-.h1-test {
-    background: red;
-    padding: 50px;
+
+
+#overlay_content_box {
+    position: relative;
+    border-radius: 5px;
+    width: 360px;
+    height: 686px;
+
+    background-color: #191919;
+
+    margin: 70px 0 0 10px;
+    cursor: pointer;
 }
 
-div {
-    width: 500px;
-    height: 500px;
+#overlay_content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#overlay_content .overlay_minimize_btn {
+    width: 50px;
+    height: 50px;
     background: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 5px;
 }
