--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -5,9 +5,9 @@ body {
 
 #overlay_content_box {
     position: relative;
-    border-radius: 5px;
-    width: 360px;
-    height: 686px;
+    border-radius: 1000px;
+    width: 50px;
+    height: 50px;
 
     background-color: #191919;
 
@@ -36,6 +36,7 @@ body {
     border-radius: 5px;
     font-size: 20px;
     cursor: pointer;
+    z-index: 999;
 }
 
 .overlay_minimize_btn span {
