--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -5,14 +5,12 @@ body {
 
 #overlay_content_box {
     position: relative;
-    border-radius: 1000px;
-    width: 50px;
-    height: 50px;
-
+    border-radius: 5px;
+    width: 360px;
+    height: 686px;
     background-color: #191919;
-
     margin: 70px 0 0 10px;
-    cursor: pointer;
+    z-index: -1;
 }
 
 #overlay_content {
@@ -41,4 +39,19 @@ body {
 
 .overlay_minimize_btn span {
     margin-top: -4px;
+}
+
+
+.overlay_wallpaper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: -99;
+}
+
+.overlay_wallpaper img {
+    width: 100%;
+    height: 100%;
+    opacity: 0.7
 }
