--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -57,3 +57,10 @@ a {
     display: flex;
     flex-direction: row;
 }
+
+.hr {
+    width: 100%;
+    height: 1px;
+    background: #272626;
+    margin: 15px 0;
+}
