add textbox section

--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -1,3 +1,8 @@
+::selection {
+    color: white;
+    background: #ffa32b;
+}
+
 body {
     background: transparent !important;
     overflow: hidden;
@@ -27,7 +32,11 @@ body {
     padding: 130px 20px 0 20px;
     z-index: 99;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.overlay_content__header_box {
+    display: flex;
     justify-content: space-between;
     align-items: center;
 }
@@ -36,9 +45,14 @@ body {
     font-size: 14px;
 }
 
+.overlay_content__title:not(:first-child) {
+    margin: 10px 0 10px 0;
+}
+
 .overlay_content__selectedType {
     font-size: 12px;
     color: #6c6c6c;
+
 }
 
 .overlay_content_select_arty_box {
@@ -83,4 +97,36 @@ input[type="radio"] {
 input[type="radio"]:checked+label {
     background: #ffa32b;
     border-radius: 5px;
+}
+
+
+
+/* Input textbox style */
+.overlay_content__textboxes {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 0px;
+}
+
+.overlay_content__textboxes input[type="number"] {
+    border: none;
+    width: 49%;
+    height: 56px;
+    border-radius: 5px;
+    background: #121212;
+    padding-left: 20px;
+    font-size: 16px;
+    color: white;
+    scroll-behavior: unset;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number]:focus {
+    outline: 1px solid #ffa32b;
 }
