--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -34,3 +34,11 @@ body {
     margin-top: -2.5px;
     font-size: 20px;
 }
+
+.overlay_arty_image {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
