--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -41,4 +41,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 50%;
+}
+.overlay_arty_image img {
+    width: 65%;
+    height: 65%;
+    cursor: pointer;
 }
