--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -51,10 +51,20 @@ body {
 }
 
 
+#overlay_content {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    padding-top: 15px;
+    transition: all 0.5s cubic-bezier(.78, .31, .18, .99);
+    transition-delay: 0.3s;
+}
+
 /* extra classes used for animation */
 .overlay_Animation {
     transition: all 0.5s cubic-bezier(.78, .31, .18, .99);
 }
+
 .display_none {
     display: none;
 }
