--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -86,6 +86,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 15px 0 15px 0;
 }
 
 .overlay__primaryTitle {
@@ -98,7 +99,62 @@ body {
     font-size: 12px;
 }
 
+/* artillery_type_radio */
+.artillery_type_radio {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 0 15px 0;
+}
 
+.type_single_radio {
+    width: 76px;
+    height: 76px;
+    background: #121212;
+    border-radius: 5px;
+}
+
+label {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.1s ease-in-out;
+}
+
+label img {
+    width: 75%;
+    height: 75%;
+}
+
+input[type="radio"] {
+    display: none;
+}
+
+input[type="radio"]:checked+label {
+    background: #ffa32b;
+}
+
+
+/* hr */
+.hr {
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: #272626;
+}
+
+
+
+/* textboxes */
+input[type="number"] {
+    width: 49%;
+    height: 56px;
+    background: #121212;
+}
 
 
 
