--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -154,6 +154,15 @@ input[type="number"] {
     width: 49%;
     height: 56px;
     background: #121212;
+    border: 0;
+    border-radius: 5px;
+    padding-left: 20px;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 
