add margin-left to entire form

--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -6,6 +6,7 @@ body {
 
 .overlay_container {
     margin-top: 65px;
+    margin-left: 10px;
     position: relative;
     width: 75px;
     height: 75px;
