--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -60,8 +60,6 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0;
-    transition: all 0.5s cubic-bezier(.78, .31, .18, .99);
-    transition-delay: 0.3s;
     position: relative;
     z-index: 0;
 }
@@ -183,9 +181,10 @@ input[type=number]::-webkit-outer-spin-button {
     margin-top: 10px;
 }
 
-.coordinate_box:not(:first-child){
+.coordinate_box:not(:first-child) {
     margin-left: 20px;
-} 
+}
+
 .overlay__primaryNumber {
     font-size: 30px;
 }
@@ -207,4 +206,9 @@ input[type=number]::-webkit-outer-spin-button {
 
 .margin-top20 {
     margin-top: 35px;
+}
+
+.opacity_animation {
+    transition: all 0.5s cubic-bezier(.78, .31, .18, .99);
+    transition-delay: 0.3s;
 }
