--- a/assets/styles/overlay.css
+++ b/assets/styles/overlay.css
@@ -213,3 +213,7 @@ input[type=number]::-webkit-outer-spin-button {
     transition: all 0.5s cubic-bezier(.78, .31, .18, .99);
     transition-delay: 0.3s;
 }
+
+.red_color {
+    color: #ff4848;
+}
