--- a/assets/styles/landing.css
+++ b/assets/styles/landing.css
@@ -142,7 +142,7 @@
     grid-auto-rows: auto;
 
     grid-template-areas:
-        "startup startup logs"
+        "startup startup startup"
         "community community community ";
 
     padding: 50px;
@@ -168,17 +168,6 @@
     margin-top: 15px;
 }
 
-.status-text-image {
-    width: 20px;
-    height: 20px;
-    margin-right: 15px;
-}
-
-.status-text-image img {
-    width: 100%;
-    height: 100%;
-    margin-right: 15px;
-}
 
 .status-text-autoFix {
     color: #6091ff;
@@ -204,31 +193,6 @@
     margin-top: 35px;
     cursor: pointer;
 }
-
-
-.update-changelog {
-    grid-area: logs;
-}
-
-/* Update text styles */
-/* ------------------ */
-
-.updateLogs {
-    height: 160px;
-    margin-top: 10px;
-    overflow-y: auto;
-}
-
-.updateLogs li {
-    color: #828181;
-    margin-top: 7px;
-}
-
-.updateLogs li::before {
-    content: "-  ";
-    color: #828181;
-}
-
 
 .community-accounts {
     grid-area: community;
@@ -265,6 +229,6 @@
     background: #7289da;
 }
 
-#icon_containers > div {
+#icon_containers>div {
     margin-right: 15px;
 }
