--- a/assets/styles/landing.css
+++ b/assets/styles/landing.css
@@ -206,14 +206,12 @@
     width: 76px;
     height: 76px;
     border-radius: 5px;
-
     display: flex;
     justify-content: center;
     align-items: center;
-
     margin-top: 20px;
-
     cursor: pointer;
+    margin-right: 0;
 }
 
 .icon-box img {
@@ -292,6 +290,37 @@
     margin-right: 5px;
     outline: none;
     cursor: pointer;
+}
+
+.copyright-container {
+    flex: 1;
+    height: auto;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.copyright-container > p {
+    font-size: 13px;
+    text-transform: uppercase;
+    color: #979797;
+}
+.xeniac_logo {
+    position: relative;
+    margin-left: 10px;
+    width: 10px;
+    height: 10.95px;
+    display: block;
+
+}
+
+.xeniac_logo > img {
+    position: absolute;
+    top: -1.2px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .buttons .button-black {
